<resources>
    <string name="app_name">Мобільний Гід</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Пошук</string>
    <string name="action_sort_alpha">Сортування за алфавітом</string>
    <string name="action_sort_rating">Сортування за рейтингом</string>
    <string name="action_sort_distance">Сортування за віддаленністю</string>
    <string name="action_auth">Вхід/Вихід</string>

    <string name="set_rating">Залишити оцінку</string>
    <string name="set_comment">Залишити коментар</string>
    <string name="send">Відправити</string>
    <string name="cancel">Відміна</string>
    <string name="next">Далі</string>
    <string name="anonim">Анонімно</string>

    <string name="address">Адреса: </string>
    <string name="email">Email: </string>
    <string name="name">Ім\'я: </string>
    <string name="comments">Відгуки: </string>
    <string name="description">Опис: </string>
    <string name="categories">Категорії: </string>
    <string name="see_on_map">Переглянути на мапі</string>

    <string name="auth">Авторизація</string>
    <string name="login">Вхід</string>
    <string name="registration">Реєстрація</string>
    <string name="comment">Відгук</string>
    <string name="cabinet">Особистий кабінет</string>
    <string name="no_connection">Відсутне інтернет з\'єднання</string>

    <string name="auth_main_text">Для того щоб залишити відгук до закладу - необхідно авторизуватися у системі. Якщо ви ще не зареєстровані то пройдіть реєстрацію.</string>

    <string name="plz_fill_all_fields">Будьласка заповніть усі поля для вводу</string>
    <string name="plz_input_equals_passwords">Паролі у введених плях відрізняються</string>
    <string name="sry_cant_load_data_from_server">Не вдалося встановити з\'єднання з сервером</string>
    <string name="sry_registration_error">При реєстрації відбулася помилка</string>
    <string name="sry_login_error">Ви ввели неправильний логін або пароль</string>
    <string name="sry_no_connection">Активуйте доступ до інтернету і натисніть \"Повторити\"</string>
    <string name="sry_no_rating">Будьласка встановіть оцінку закладу</string>
    <string name="sry_connect_server_error">Під час завантаження данних з серверу виникла помилка. \n Натисніть \"Повторити\" для повторного завантаження</string>

    <string name="tologin">Ввійти</string>
    <string name="toexit">Вийти</string>
    <string name="toregister">Зареєструватися</string>
    <string name="tosend">Надіслати</string>
    <string name="torepeat">Повторити</string>
    <string name="toauth">Авторизуватися</string>

    <string name="login_email">Email</string>
    <string name="login_password">Пароль</string>
    <string name="login_confirm_password">Підтвердіть пароль</string>
    <string name="send_comment_main_text">Повідомлення...</string>
    <string name="login_name">Введіть будьласка своє ім\'я</string>
    <string name="no_comments">Відгуки відсутні</string>

    <string name="plz_wait_login">Вхід у систему</string>
    <string name="plz_wait_registration">Реєстрація у системі</string>
    <string name="plz_wait_getting_list">Завантаження списку місць</string>
    <string name="plz_wait_loading_map">Завантаження мапи</string>
    <string name="plz_wait_sending_comment">Відправлення відгуку</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>


</resources>
