<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_alpha"
        android:orderInCategory="100"
        android:title="@string/action_sort_alpha"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_rating"
        android:orderInCategory="100"
        android:title="@string/action_sort_rating"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_distance"
        android:orderInCategory="100"
        android:title="@string/action_sort_distance"
        app:showAsAction="never" />
</menu>
