<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/login_bg"
    tools:context="com.bezeka.igor.mobilegidkiev.dialog_fragment.LoginDialogFragment">

    <TextView
        android:text="@string/registration"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/login_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etName"
        android:layout_marginTop="20dp"
        android:hint="@string/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancle"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/toregister"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
    </RelativeLayout>




</LinearLayout>
