<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/login_bg"
    tools:context="com.bezeka.igor.mobilegidkiev.dialog_fragment.LoginDialogFragment">

    <TextView
        android:text="@string/login"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg_settings"
        android:padding="10dp"
        android:hint="@string/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg_settings"
        android:hint="@string/login_password"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancle"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/rounded_button_grey_with_border"
            android:textAllCaps="false"
            android:textColor="#fc478fbe"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textColor="#fc478fbe"
            android:background="@drawable/rounded_button_grey_with_border"
            android:text="@string/tologin"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
    </RelativeLayout>




</LinearLayout>
