<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.bezeka.igor.mobilegidkiev.dialog_fragment.AuthDialogFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/auth"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPreAuth"
        android:text="@string/auth_main_text"
        android:textSize="17dp"
        android:background="@drawable/rounded_button_grey_with_border"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAfterAuth"
        android:textSize="17dp"
        android:background="@drawable/rounded_button_grey_with_border"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:id="@+id/layPreAuth"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/action_bar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:text="@string/toregister"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/action_bar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:text="@string/tologin"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layAfterAuth"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancle"
            android:visibility="visible"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:background="@color/action_bar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/action_bar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:text="@string/toexit"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
    </RelativeLayout>





</LinearLayout>
