<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.bezeka.igor.mobilegidkiev.dialog_fragment.NoConnectionDialogFragment">

    <TextView
        android:text="@string/no_connection"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_grey_with_border"
        android:padding="10dp"
        android:text="@string/sry_no_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancle"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:background="@color/action_bar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRepeat"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/torepeat"
            android:background="@color/action_bar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
    </RelativeLayout>




</LinearLayout>
